--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "lorenzobot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "dev": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cloudinary": "^1.40.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "request": "^2.88.2",
-    "telegraf": "^4.13.1"
-  }
+    "name": "lorenzobot",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "dev": "nodemon app.js",
+        "start": "node app.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cloudinary": "^1.40.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "request": "^2.88.2",
+        "telegraf": "^4.13.1"
+    }
 }
